--- a/index.html
+++ b/index.html
@@ -119,17 +119,25 @@
     </header>
 
     <!-- How it works -->
-    <section class="hiw">
-        <div class="container">
+    <section class="hiw-mobile">
+        <div class="container hiw-artist">
             <div class="section-heading text-center" id="features">
                 <h4>How it works</h4>
                 <p>for artists</p>
                 <hr>
             </div>
-            <div class="row">
-                <div class="hiw-step hiw-shape-1 my-auto col-12 align-items-center text-center p-4">
-                    <img class="col-6 m-2" src="img/icon-upload.svg">
-                    <p class="">Publich your art on Bimble</p>
+            <div class="row p-2">
+                <div class="hiw-step hiw-shape-1 col-12 d-flex flex-column align-items-center text-center">
+                    <img class="col-5 mt-auto" src="img/icon-upload.svg">
+                    <p class="pt-2 pb-1 mb-auto">Publich your art on Bimble</p>
+                </div>
+                <div class="hiw-step hiw-shape-2 col-12 d-flex flex-column align-items-center text-center">
+                    <img class="col-4 mt-auto" src="img/icon-email.svg">
+                    <p class="pt-2 pb-1 mb-auto">Shops will contact you to exhibit your art</p>
+                </div>
+                <div class="hiw-step hiw-shape-3 col-12 d-flex flex-column align-items-center text-center">
+                    <img class="col-5 mt-auto ml-2" src="img/icon-sell.svg">
+                    <p class="pt-2 pb-1 mb-auto">Interested clients will buy your art</p>
                 </div>
             </div>
         </div>
