Add team section structure

--- a/index.html
+++ b/index.html
@@ -168,6 +168,20 @@
         </div>
     </section>
 
+    <section class="team-mobile" id="team">
+        <div class="team-title ml-3 mb-5 d-flex flex-column">
+            <h1>Team</h1>
+            <img class="img-fluid" src="img/team-title-underline.svg">
+        </div>
+
+        <div class="team-card d-flex flex-column align-items-center">
+            <img class="img-fluid rounded-circle" src="img/alba.jpg">
+            <h4>Alba Garcia</h4>
+            <p>Business Management</p>
+        </div>
+    </section>
+
+    <!--
     <section class="contact" id="contact">
         <div class="container">
             <div class="row">
@@ -230,7 +244,7 @@
             <p>&copy; Dokey 2018. All Rights Reserved.</p>
             <p class="external-copyright">©2017 Google LLC All rights reserved. Google and the Google Logo are registered trademarks of Google LLC</p>
             <ul class="list-inline">
-                <!--
+
                 <li class="list-inline-item">
                     <a href="#">Privacy</a>
                 </li>
@@ -240,10 +254,9 @@
                 <li class="list-inline-item">
                     <a href="#">FAQ</a>
                 </li>
-                -->
             </ul>
         </div>
-    </footer>
+    </footer>-->
 
     <!-- Bootstrap core JavaScript -->
     <script src="vendor/jquery/jquery.min.js"></script>
