--- a/index.html
+++ b/index.html
@@ -168,16 +168,28 @@
         </div>
     </section>
 
-    <section class="team-mobile" id="team">
+    <section class="team" id="team">
         <div class="team-title ml-3 mb-5 d-flex flex-column">
             <h1>Team</h1>
             <img class="img-fluid" src="img/team-title-underline.svg">
         </div>
 
         <div class="team-card d-flex flex-column align-items-center">
-            <img class="img-fluid rounded-circle" src="img/alba.jpg">
+            <img class="team-img border border-grad-1 img-fluid rounded-circle mb-3" src="img/alba.jpg">
             <h4>Alba Garcia</h4>
             <p>Business Management</p>
+        </div>
+
+        <div class="team-card d-flex flex-column align-items-center">
+            <img class="team-img border border-grad-2 img-fluid rounded-circle mb-3" src="img/fede.jpg">
+            <h4>Federico Terzi</h4>
+            <p>Software Engineer</p>
+        </div>
+
+        <div class="team-card d-flex flex-column align-items-center">
+            <img class="team-img border border-grad-3 img-fluid rounded-circle mb-3" src="img/pelle.jpg">
+            <h4>Matteo Pellegrino</h4>
+            <p>Software Engineer</p>
         </div>
     </section>
 
