Add contact section

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         <!-- Navigation -->
         <nav class="bg_grad_1 navbar navbar-expand-lg navbar-light" id="mainNav">
             <div class="container col-12 col-md-11">
-                <a class="navbar-brand js-scroll-trigger" href="#page-top"><img src="img/logo.png"> Dokey</a>
+                <a class="navbar-brand js-scroll-trigger" href="#page-top"><img src="img/logo.svg"> Dokey</a>
                 <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
                         data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
                         aria-label="Toggle navigation">
@@ -193,54 +193,65 @@
         </div>
     </section>
 
-    <!--
+    <img src="img/footer-curve.svg" id="footer-curve" class="w-100 m-0 img-fluid">
+
     <section class="contact" id="contact">
         <div class="container">
-            <div class="row">
-                <div class="col-md-4 offset-1 offset-sm-0 col-xs-12">
-                    <ul class="list-contact">
-                        <li class="list-contact-title">
-                            Navigation
-                        </li>
-                        <li>
-                            <a class="js-scroll-trigger" href="#home">Home</a>
-                        </li>
-                        <li>
-                            <a class="js-scroll-trigger" href="#subscribe">Subscride</a>
-                        </li>
-                    </ul>
-                </div>
+            <div class="row d-flex flex-column align-items-center">
+                <img src="img/logo.svg" class="img-fluid mb-5">
 
-                <div class="col-md-4 offset-1 offset-sm-0 col-xs-12">
+                <div class="col-11 offset-1">
                     <ul class="list-contact">
                         <li class="list-contact-title">
                             Contacts
                         </li>
                         <li class="list-contact-item">
-                            <a href="mailto:dokeyapp@gmail.com">dokeyapp@gmail.com</a>
+                            <a href="mailto:contact@bimble.cc">contact@bimble.cc</a>
                         </li>
-                        <li class="list-contact-item">
-                            <a href="https://www.iubenda.com/privacy-policy/59008303" class="iubenda-nostyle no-brand iubenda-embed " title="Privacy Policy">Privacy Policy</a>
-                            <script type="text/javascript">(function (w,d) {var loader = function () {var s = d.createElement("script"), tag = d.getElementsByTagName("script")[0]; s.src="https://cdn.iubenda.com/iubenda.js"; tag.parentNode.insertBefore(s,tag);}; if(w.addEventListener){w.addEventListener("load", loader, false);}else if(w.attachEvent){w.attachEvent("onload", loader);}else{w.onload = loader;}})(window, document);</script>
-                        </li>
-                        <li class="list-contact-item">
-                            <a href="https://www.iubenda.com/privacy-policy/59008303/cookie-policy" class="iubenda-nostyle no-brand iubenda-embed " title="Cookie Policy">Cookie Policy</a>
-                            <script type="text/javascript">(function (w,d) {var loader = function () {var s = d.createElement("script"), tag = d.getElementsByTagName("script")[0]; s.src="https://cdn.iubenda.com/iubenda.js"; tag.parentNode.insertBefore(s,tag);}; if(w.addEventListener){w.addEventListener("load", loader, false);}else if(w.attachEvent){w.attachEvent("onload", loader);}else{w.onload = loader;}})(window, document);</script>
+                        <li class="list-contact-item contact-social mt-3">
+                            <a href="https://www.facebook.com/Bimble-221233938806359/" target="_blank" class="p-2"><img src="img/facebook.svg"></a>
+                            <a href="https://www.instagram.com/bimblestartup/?hl=it" target="_blank" class="p-2"><img src="img/instagram.svg"></a>
+                            <!--<a href=#" class=""><img src="img/linkedin.svg"></a>-->
+
                         </li>
                     </ul>
                 </div>
 
-                <div class="col-md-4 offset-1 offset-sm-0 col-xs-12">
+                <div class="col-11 offset-1">
+                    <ul class="list-contact">
+                        <li class="list-contact-title">
+                            Navigation
+                        </li>
+                        <li>
+                            <a class="js-scroll-trigger" href="#hiw-artist">How it works</a>
+                        </li>
+                        <li>
+                            <a class="js-scroll-trigger" href="#gallery">Gallery</a>
+                        </li>
+                        <li>
+                            <a class="js-scroll-trigger" href="#team">Team</a>
+                        </li>
+                        <li>
+                            <a class="js-scroll-trigger" href="#privacy">Privacy Policy</a>
+                        </li>
+                        <li>
+                            <a class="js-scroll-trigger" href="#cookie">Cookie Policy</a>
+                        </li>
+                    </ul>
+                </div>
+
+                <div class="col-11 offset-1">
                     <ul class="list-contact">
                         <li class="list-contact-title">
                             About us
                         </li>
                         <li>
-                            We are Computer Engineering students from  University of Bologna,
-                            developing Dokey with love, seriousness and passion.
+                            “We are a cohesively
+                            team, working on Bimble with love, passion and energy”
                         </li>
                         <li class="text-right">
-                            <br>
+                            <br> -
+                            <a href="" target="_blank"><i>Alba</i></a>,
                             <a href="https://github.com/federico-terzi" target="_blank"><i>Federico</i></a>,
                             <a href="https://github.com/arabello" target="_blank"><i>Matteo</i></a>
                         </li>
@@ -253,7 +264,7 @@
 
     <footer>
         <div class="container">
-            <p>&copy; Dokey 2018. All Rights Reserved.</p>
+            <p>&copy; Bimble 2019. All Rights Reserved.</p>
             <p class="external-copyright">©2017 Google LLC All rights reserved. Google and the Google Logo are registered trademarks of Google LLC</p>
             <ul class="list-inline">
 
@@ -268,7 +279,7 @@
                 </li>
             </ul>
         </div>
-    </footer>-->
+    </footer>
 
     <!-- Bootstrap core JavaScript -->
     <script src="vendor/jquery/jquery.min.js"></script>
