Add gallery section

--- a/index.html
+++ b/index.html
@@ -91,13 +91,13 @@
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item">
-                            <a class="nav-link js-scroll-trigger text-center" href="#features">Features</a>
+                            <a class="nav-link js-scroll-trigger text-center" href="#hiw-artist">How it works</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link js-scroll-trigger text-center" href="#mc-embedded-subscribe-form">Join Now</a>
+                            <a class="nav-link js-scroll-trigger text-center" href="#gallery">Gallery</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link js-scroll-trigger text-center" href="#contact">About</a>
+                            <a class="nav-link js-scroll-trigger text-center" href="#contact">Contacts</a>
                         </li>
                     </ul>
                 </div>
@@ -168,10 +168,20 @@
         </div>
     </section>
 
+    <section class="gallery" id="gallery">
+        <div class="gallery-title ml-3 mb-5 d-flex flex-column">
+            <h1>Gallery</h1>
+            <img class="img-fluid w-75 pull-left" src="img/gallery-title-underline.svg">
+        </div>
+
+        <a href="#"
+           class="btn-upload-art btn btn-accent col-10 offset-1 btn-shadow btn-icon btn-xl js-scroll-trigger">Upload your art</a>
+    </section>
+
     <section class="team" id="team">
         <div class="team-title ml-3 mb-5 d-flex flex-column">
             <h1>Team</h1>
-            <img class="img-fluid" src="img/team-title-underline.svg">
+            <img class="img-fluid w-75 pull-left" src="img/team-title-underline.svg">
         </div>
 
         <div class="team-card d-flex flex-column align-items-center">
