--- a/index.html
+++ b/index.html
@@ -44,7 +44,22 @@
     <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
 
-    <title>Dokey | Supercharge your productivity</title>
+    <title>Bimble | Connecting Artists with Empty Walls</title>
+
+    <!-- Core CSS file -->
+    <link rel="stylesheet" href="photoswipe/photoswipe.css">
+
+    <!-- Skin CSS file (styling of UI - buttons, caption, etc.)
+         In the folder of skin CSS file there are also:
+         - .png and .svg icons sprite,
+         - preloader.gif (for browsers that do not support CSS animations) -->
+    <link rel="stylesheet" href="photoswipe/default-skin/default-skin.css">
+
+    <!-- Core JS file -->
+    <script src="photoswipe/photoswipe.min.js"></script>
+
+    <!-- UI JS file -->
+    <script src="photoswipe/photoswipe-ui-default.min.js"></script>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -58,6 +73,8 @@
 
     <!-- Custom styles for this template -->
     <link href="scss/build.css" rel="stylesheet">
+
+
 
 </head>
 
@@ -172,6 +189,79 @@
         <div class="gallery-title ml-3 mb-5 d-flex flex-column">
             <h1>Gallery</h1>
             <img class="img-fluid w-75 pull-left" src="img/gallery-title-underline.svg">
+        </div>
+
+        <div class="gallery-container d-flex flex-row flex-wrap justify-content-center">
+            <div class="d-flex flex-column">
+                <img class="gallery-img img-fluid image m-1" src="https://placekitten.com/600/400"
+                     itemprop="thumbnail" alt="Image description"
+                     data-width="600" data-height="400"
+                     onclick="openPainting(this);"
+                />
+                <img class="gallery-img img-fluid image m-1" src="https://placekitten.com/600/500"
+                     itemprop="thumbnail" alt="Image description"
+                     data-width="600" data-height="500"
+                     onclick="openPainting(this);"
+                />
+                <img class="gallery-img img-fluid image m-1" src="https://placekitten.com/600/500"
+                     itemprop="thumbnail" alt="Image description"
+                     data-width="600" data-height="500"
+                     onclick="openPainting(this);"
+                />
+            </div>
+
+            <div class="d-flex flex-column">
+                <img class="gallery-img img-fluid image m-1" src="https://placekitten.com/600/500"
+                     itemprop="thumbnail" alt="Image description"
+                     data-width="600" data-height="500"
+                     onclick="openPainting(this);"
+                />
+                <img class="gallery-img img-fluid image m-1" src="https://placekitten.com/600/500"
+                     itemprop="thumbnail" alt="Image description"
+                     data-width="600" data-height="500"
+                     onclick="openPainting(this);"
+                />
+                <img class="gallery-img img-fluid image m-1" src="https://placekitten.com/600/400"
+                     itemprop="thumbnail" alt="Image description"
+                     data-width="600" data-height="400"
+                     onclick="openPainting(this);"
+                />
+            </div>
+            <div class="d-flex flex-column">
+                <img class="gallery-img img-fluid image m-1" src="https://placekitten.com/600/400"
+                     itemprop="thumbnail" alt="Image description"
+                     data-width="600" data-height="400"
+                     onclick="openPainting(this);"
+                />
+                <img class="gallery-img img-fluid image m-1" src="https://placekitten.com/600/500"
+                     itemprop="thumbnail" alt="Image description"
+                     data-width="600" data-height="500"
+                     onclick="openPainting(this);"
+                />
+                <img class="gallery-img img-fluid image m-1" src="https://placekitten.com/600/500"
+                     itemprop="thumbnail" alt="Image description"
+                     data-width="600" data-height="500"
+                     onclick="openPainting(this);"
+                />
+            </div>
+
+            <div class="d-flex flex-column">
+                <img class="gallery-img img-fluid image m-1" src="https://placekitten.com/600/500"
+                     itemprop="thumbnail" alt="Image description"
+                     data-width="600" data-height="500"
+                     onclick="openPainting(this);"
+                />
+                <img class="gallery-img img-fluid image m-1" src="https://placekitten.com/600/500"
+                     itemprop="thumbnail" alt="Image description"
+                     data-width="600" data-height="500"
+                     onclick="openPainting(this);"
+                />
+                <img class="gallery-img img-fluid image m-1" src="https://placekitten.com/600/400"
+                     itemprop="thumbnail" alt="Image description"
+                     data-width="600" data-height="400"
+                     onclick="openPainting(this);"
+                />
+            </div>
         </div>
 
         <a href="#"
@@ -300,6 +390,73 @@
 
     <!-- Custom scripts for this template -->
     <script src="js/build.js"></script>
+
+    <!-- Root element of PhotoSwipe. Must have class pswp. -->
+    <div class="pswp" tabindex="-1" role="dialog" aria-hidden="true">
+
+        <!-- Background of PhotoSwipe.
+             It's a separate element as animating opacity is faster than rgba(). -->
+        <div class="pswp__bg"></div>
+
+        <!-- Slides wrapper with overflow:hidden. -->
+        <div class="pswp__scroll-wrap">
+
+            <!-- Container that holds slides.
+                PhotoSwipe keeps only 3 of them in the DOM to save memory.
+                Don't modify these 3 pswp__item elements, data is added later on. -->
+            <div class="pswp__container">
+                <div class="pswp__item"></div>
+                <div class="pswp__item"></div>
+                <div class="pswp__item"></div>
+            </div>
+
+            <!-- Default (PhotoSwipeUI_Default) interface on top of sliding area. Can be changed. -->
+            <div class="pswp__ui pswp__ui--hidden">
+
+                <div class="pswp__top-bar">
+
+                    <!--  Controls are self-explanatory. Order can be changed. -->
+
+                    <div class="pswp__counter"></div>
+
+                    <button class="pswp__button pswp__button--close" title="Close (Esc)"></button>
+
+                    <button class="pswp__button pswp__button--share" title="Share"></button>
+
+                    <button class="pswp__button pswp__button--fs" title="Toggle fullscreen"></button>
+
+                    <button class="pswp__button pswp__button--zoom" title="Zoom in/out"></button>
+
+                    <!-- Preloader demo https://codepen.io/dimsemenov/pen/yyBWoR -->
+                    <!-- element will get class pswp__preloader--active when preloader is running -->
+                    <div class="pswp__preloader">
+                        <div class="pswp__preloader__icn">
+                            <div class="pswp__preloader__cut">
+                                <div class="pswp__preloader__donut"></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="pswp__share-modal pswp__share-modal--hidden pswp__single-tap">
+                    <div class="pswp__share-tooltip"></div>
+                </div>
+
+                <button class="pswp__button pswp__button--arrow--left" title="Previous (arrow left)">
+                </button>
+
+                <button class="pswp__button pswp__button--arrow--right" title="Next (arrow right)">
+                </button>
+
+                <div class="pswp__caption">
+                    <div class="pswp__caption__center"></div>
+                </div>
+
+            </div>
+
+        </div>
+
+    </div>
 
 </body>
 
