Add gallery images

--- a/index.html
+++ b/index.html
@@ -193,72 +193,53 @@
 
         <div class="gallery-container d-flex flex-row flex-wrap justify-content-center">
             <div class="d-flex flex-column">
-                <img class="gallery-img img-fluid image m-1" src="https://placekitten.com/600/400"
-                     itemprop="thumbnail" alt="Image description"
-                     data-width="600" data-height="400"
+                <img class="gallery-img img-fluid image m-1" src="img/paintings/marina1.jpg"
+                     alt="Marina (Innacure)"
+                     data-width="1276" data-height="1600"
                      onclick="openPainting(this);"
                 />
-                <img class="gallery-img img-fluid image m-1" src="https://placekitten.com/600/500"
-                     itemprop="thumbnail" alt="Image description"
-                     data-width="600" data-height="500"
-                     onclick="openPainting(this);"
-                />
-                <img class="gallery-img img-fluid image m-1" src="https://placekitten.com/600/500"
-                     itemprop="thumbnail" alt="Image description"
-                     data-width="600" data-height="500"
+                <img class="gallery-img img-fluid image m-1" src="img/paintings/alba1.jpg"
+                     alt="Alba Garcia"
+                     data-width="1000" data-height="1007"
                      onclick="openPainting(this);"
                 />
             </div>
 
             <div class="d-flex flex-column">
-                <img class="gallery-img img-fluid image m-1" src="https://placekitten.com/600/500"
-                     itemprop="thumbnail" alt="Image description"
-                     data-width="600" data-height="500"
+                <img class="gallery-img img-fluid image m-1" src="img/paintings/laurabelmonte1.jpg"
+                     alt="Laura Belmonte"
+                     data-width="638" data-height="909"
                      onclick="openPainting(this);"
                 />
-                <img class="gallery-img img-fluid image m-1" src="https://placekitten.com/600/500"
-                     itemprop="thumbnail" alt="Image description"
-                     data-width="600" data-height="500"
+                <img class="gallery-img img-fluid image m-1" src="img/paintings/laurabelmonte3.jpg"
+                     alt="Laura Belmonte"
+                     data-width="697" data-height="467"
                      onclick="openPainting(this);"
                 />
-                <img class="gallery-img img-fluid image m-1" src="https://placekitten.com/600/400"
-                     itemprop="thumbnail" alt="Image description"
-                     data-width="600" data-height="400"
-                     onclick="openPainting(this);"
-                />
+
             </div>
             <div class="d-flex flex-column">
-                <img class="gallery-img img-fluid image m-1" src="https://placekitten.com/600/400"
-                     itemprop="thumbnail" alt="Image description"
-                     data-width="600" data-height="400"
+                <img class="gallery-img img-fluid image m-1" src="img/paintings/marina2.jpg"
+                     alt="Marina (Innacure)"
+                     data-width="1440" data-height="1038"
                      onclick="openPainting(this);"
                 />
-                <img class="gallery-img img-fluid image m-1" src="https://placekitten.com/600/500"
-                     itemprop="thumbnail" alt="Image description"
-                     data-width="600" data-height="500"
-                     onclick="openPainting(this);"
-                />
-                <img class="gallery-img img-fluid image m-1" src="https://placekitten.com/600/500"
-                     itemprop="thumbnail" alt="Image description"
-                     data-width="600" data-height="500"
+                <img class="gallery-img img-fluid image m-1" src="img/paintings/laurabelmonte2.jpg"
+                     alt="Laura Belmonte"
+                     data-width="675" data-height="904"
                      onclick="openPainting(this);"
                 />
             </div>
 
             <div class="d-flex flex-column">
-                <img class="gallery-img img-fluid image m-1" src="https://placekitten.com/600/500"
-                     itemprop="thumbnail" alt="Image description"
-                     data-width="600" data-height="500"
+                <img class="gallery-img img-fluid image m-1" src="img/paintings/karyaoktem2.jpg"
+                     alt="Karya Oktem"
+                     data-width="1020" data-height="1422"
                      onclick="openPainting(this);"
                 />
-                <img class="gallery-img img-fluid image m-1" src="https://placekitten.com/600/500"
-                     itemprop="thumbnail" alt="Image description"
-                     data-width="600" data-height="500"
-                     onclick="openPainting(this);"
-                />
-                <img class="gallery-img img-fluid image m-1" src="https://placekitten.com/600/400"
-                     itemprop="thumbnail" alt="Image description"
-                     data-width="600" data-height="400"
+                <img class="gallery-img img-fluid image m-1" src="img/paintings/karyaoktem1.jpg"
+                     alt="Karya Oktem"
+                     data-width="1400" data-height="1090"
                      onclick="openPainting(this);"
                 />
             </div>
