--- a/index.html
+++ b/index.html
@@ -254,13 +254,20 @@
             </div>
         </div>
 
-        <div class="row justify-content-center p-3">
+        <div class="d-md-none row justify-content-center p-3">
             <a href="#"
                class="btn-upload-art mt-5 btn btn-accent btn-shadow btn-icon btn-xl
-               js-scroll-trigger col-auto d-md-none">Upload
+               js-scroll-trigger col-auto">Upload
                 your art</a>
         </div>
 
+    </section>
+
+    <section class="faq" id="faq">
+        <div class="faq-title ml-3 mb-5 d-flex flex-column">
+            <h1>FAQ</h1>
+            <img class="img-fluid pull-left" src="img/team-title-underline.svg">
+        </div>
     </section>
 
     <section class="team" id="team">
