Hot fix title underlines

--- a/index.html
+++ b/index.html
@@ -264,14 +264,14 @@
     </section>
 
     <section class="faq" id="faq">
-        <div class="faq-title ml-3 mb-5 d-flex flex-column">
+        <div class="faq-title row ml-3 mb-5 d-flex flex-column">
             <h1>FAQ</h1>
-            <img class="img-fluid pull-left title-underlying" src="img/team-title-underline.svg">
+            <img class="img-fluid w-75 pull-left title-underlying" src="img/faq-title-underline.svg">
         </div>
     </section>
 
     <section class="team" id="team">
-        <div class="team-title ml-3 mb-5 d-flex flex-column">
+        <div class="team-title row ml-3 mb-5 d-flex flex-column">
             <h1>Team</h1>
             <img class="img-fluid w-75 pull-left title-underlying" src="img/team-title-underline.svg">
         </div>
