Adapt masthead to large screen

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
             </div>
         </nav>
 
-        <div class="container-fluid content d-flex align-items-end masthead-content">
+        <div class="container-fluid content d-flex masthead-content">
             <div class="offset-md-1 flex-column no-gutters">
                 <h1>Bimble</h1>
                 <h2 class="mt-3 col-md-8 col-10">Every empty wall is an opportunity to exhibit your art.</h2>
