Add HIW desktop

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item">
-                            <a class="nav-link js-scroll-trigger text-center" href="#hiw-artist">How it works</a>
+                            <a class="nav-link js-scroll-trigger text-center" href="#hiw">How it works</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link js-scroll-trigger text-center" href="#gallery">Gallery</a>
@@ -128,41 +128,41 @@
                 <span class="mt-3"></span>
                 <h2 class="mt-3 col-md-8 col-10">Get started as:</h2>
                 <div class="flex-row flex-sm-column">
-                    <a id="btn-artist" href="#hiw-artist" class="col-sm-12 col-md-4 mt-4 mr-md-2 btn btn-accent btn-icon-artist btn-shadow btn-icon btn-xl js-scroll-trigger">ARTIST</a>
-                    <a id="btn-business" href="#hiw-business" class="col-sm-12 col-md-4 mt-4 btn btn-accent-2 btn-icon-business btn-shadow btn-xl js-scroll-trigger">BUSINESS</a>
+                    <a id="btn-artist" href="#hiw" class="col-sm-12 col-md-4 mt-4 mr-md-2 btn btn-accent btn-icon-artist btn-shadow btn-icon btn-xl js-scroll-trigger">ARTIST</a>
+                    <a id="btn-business" href="#hiw" class="col-sm-12 col-md-4 mt-4 btn btn-accent-2 btn-icon-business btn-shadow btn-xl js-scroll-trigger">BUSINESS</a>
                 </div>
             </div>
         </div>
     </header>
 
-    <!-- How it works -->
-    <section class="hiw-mobile" data-aos="fade-in" >
 
+    <!-- How it works  mobile-->
+    <section class="hiw-mobile" data-aos="fade-in" >
         <!-- Artist -->
-        <div class="container hiw-artist" id="hiw-artist">
+        <div class="container hiw-artist" id="#hiw-artist">
             <div class="section-heading text-center">
                 <h4>How it works</h4>
                 <p>for artists</p>
                 <hr>
             </div>
-            <div class="row p-2">
-                <div class="hiw-step hiw-shape-1 col-12 d-flex flex-column align-items-center text-center">
+            <div class="row p-2 d-flex flex-column flex-lg-row justify-content-center">
+                <div class="hiw-step hiw-shape-1 col-12 col-lg-4 d-flex flex-column align-items-center text-center">
                     <img class="col-5 mt-auto" src="img/icon-upload.svg">
                     <p class="pt-2 pb-1 mb-auto">Publich your art on Bimble</p>
                 </div>
-                <div class="hiw-step hiw-shape-2 col-12 d-flex flex-column align-items-center text-center">
+                <div class="hiw-step hiw-shape-2 col-12 col-lg-4 d-flex flex-column align-items-center text-center">
                     <img class="col-4 mt-auto" src="img/icon-email.svg">
-                    <p class="pt-2 pb-1 mb-auto">Shops will contact you to exhibit your art</p>
+                    <p class="pt-2 pb-1 mb-auto">Shops will contact you</p>
                 </div>
-                <div class="hiw-step hiw-shape-3 col-12 d-flex flex-column align-items-center text-center">
-                    <img class="col-5 mt-auto ml-2" src="img/icon-sell.svg">
-                    <p class="pt-2 pb-1 mb-auto">Interested clients will buy your art</p>
+                <div class="hiw-step hiw-shape-3 col-12 col-lg-4 d-flex flex-column align-items-center text-center">
+                    <img class="col-5 mt-auto ml-2 pl-lg-4 pr-lg-1" src="img/icon-sell.svg">
+                    <p class="pt-2 pb-1 pl-lg-3 mb-auto">Interested clients will buy your art</p>
                 </div>
             </div>
         </div>
 
         <!-- Business -->
-        <div class="container hiw-business d-none" id="hiw-business">
+        <div class="container hiw-business d-none" id="#hiw-business">
             <div class="section-heading text-center">
                 <h4>How it works</h4>
                 <p>for business</p>
