Add team dekstop

--- a/index.html
+++ b/index.html
@@ -262,37 +262,45 @@
         </div>
 
     </section>
-
+<!--
     <section class="faq" id="faq">
-        <div class="faq-title row ml-3 mb-5 d-flex flex-column">
-            <h1>FAQ</h1>
-            <img class="img-fluid w-75 pull-left title-underlying" src="img/faq-title-underline.svg">
+        <div class="faq-title row ml-3 mb-5">
+            <div class="col-md-6 align-bottom">
+                <h1>FAQ</h1>
+                <img class="img-fluid pull-left title-underlying" src="img/faq-title-underline.svg">
+            </div>
         </div>
-    </section>
+    </section>-->
 
     <section class="team" id="team">
-        <div class="team-title row ml-3 mb-5 d-flex flex-column">
-            <h1>Team</h1>
-            <img class="img-fluid w-75 pull-left title-underlying" src="img/team-title-underline.svg">
+        <div class="team-title row ml-3 mb-5">
+            <div class="col-md-6 align-bottom">
+                <h1>Team</h1>
+                <img class="img-fluid pull-left title-underlying" src="img/team-title-underline.svg">
+            </div>
         </div>
 
-        <div class="team-card d-flex flex-column align-items-center">
-            <img class="team-img border border-grad-1 img-fluid rounded-circle mb-3" src="img/alba.jpg">
-            <h4>Alba Garcia</h4>
-            <p>Business Management</p>
+        <div class="d-flex flex-column flex-lg-row align-items-center">
+            <div class="team-card d-flex flex-column col-lg-4 align-items-center">
+                <img class="team-img border border-grad-1 img-fluid rounded-circle mb-3" src="img/alba.jpg">
+                <h4>Alba Garcia</h4>
+                <p>Business Management</p>
+            </div>
+
+            <div class="team-card d-flex flex-column col-lg-4 align-items-center">
+                <img class="team-img border border-grad-2 img-fluid rounded-circle mb-3" src="img/fede.jpg">
+                <h4>Federico Terzi</h4>
+                <p>Software Engineer</p>
+            </div>
+
+            <div class="team-card d-flex flex-column col-lg-4 align-items-center">
+                <img class="team-img border border-grad-3 img-fluid rounded-circle mb-3" src="img/pelle.jpg">
+                <h4>Matteo Pellegrino</h4>
+                <p>Software Engineer</p>
+            </div>
         </div>
 
-        <div class="team-card d-flex flex-column align-items-center">
-            <img class="team-img border border-grad-2 img-fluid rounded-circle mb-3" src="img/fede.jpg">
-            <h4>Federico Terzi</h4>
-            <p>Software Engineer</p>
-        </div>
 
-        <div class="team-card d-flex flex-column align-items-center">
-            <img class="team-img border border-grad-3 img-fluid rounded-circle mb-3" src="img/pelle.jpg">
-            <h4>Matteo Pellegrino</h4>
-            <p>Software Engineer</p>
-        </div>
     </section>
 
     <img src="img/footer-curve.svg" id="footer-curve" class="w-100 m-0 img-fluid">
@@ -377,7 +385,7 @@
                     <a href="#">Terms</a>
                 </li>
                 <li class="list-inline-item">
-                    <a href="#">FAQ</a>
+                    <a href="#faqq">FAQ</a>
                 </li>
             </ul>
         </div>
