Add footer dekstop

--- a/index.html
+++ b/index.html
@@ -307,10 +307,10 @@
 
     <section class="contact" id="contact">
         <div class="container">
-            <div class="row d-flex flex-column align-items-center">
-                <img src="img/logo.svg" class="img-fluid mb-5">
+            <div class="row d-flex flex-column flex-lg-row align-items-center">
+                <img src="img/logo.svg" class="img-fluid mb-5 col-lg-2">
 
-                <div class="col-11 offset-1">
+                <div class="col-11 offset-1 offset-lg-1 col-lg-3">
                     <ul class="list-contact">
                         <li class="list-contact-title">
                             Contacts
@@ -327,7 +327,7 @@
                     </ul>
                 </div>
 
-                <div class="col-11 offset-1">
+                <div class="col-11 offset-1 offset-lg-0 col-lg-3">
                     <ul class="list-contact">
                         <li class="list-contact-title">
                             Navigation
@@ -350,7 +350,7 @@
                     </ul>
                 </div>
 
-                <div class="col-11 offset-1">
+                <div class="col-11 offset-1 offset-lg-0 col-lg-3">
                     <ul class="list-contact">
                         <li class="list-contact-title">
                             About us
