--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item">
-                            <a class="nav-link js-scroll-trigger text-center" href="#hiw">How it works</a>
+                            <a class="nav-link js-scroll-trigger text-center" href="#hiw-artist">How it works</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link js-scroll-trigger text-center" href="#gallery">Gallery</a>
@@ -137,9 +137,9 @@
 
 
     <!-- How it works  mobile-->
-    <section class="hiw-mobile" data-aos="fade-in" >
+    <section class="hiw" data-aos="fade-in" >
         <!-- Artist -->
-        <div class="container hiw-artist" id="#hiw-artist">
+        <div class="container hiw-artist" id="hiw-artist">
             <div class="section-heading text-center">
                 <h4>How it works</h4>
                 <p>for artists</p>
@@ -307,7 +307,7 @@
 
     <section class="contact" id="contact">
         <div class="container">
-            <div class="row d-flex flex-column flex-lg-row align-items-center">
+            <div class="row d-flex flex-column flex-lg-row align-items-center align-items-lg-start">
                 <img src="img/logo.svg" class="img-fluid mb-5 col-lg-2">
 
                 <div class="col-11 offset-1 offset-lg-1 col-lg-3">
